...
            )
        } else {
            Icon(
                painter = painterResource(
                    id = if (isCurrentPlaying) R.drawable.pause_24 else R.drawable.queue_music_24
                ),
                contentDescription = if (isCurrentPlaying) "正在播放" else "播放",
                modifier = Modifier.size(20.dp),
                tint = if (isCurrentPlaying) MaterialTheme.colorScheme.onPrimary
                else MaterialTheme.colorScheme.primary,
            )
        }
    }
...
